// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gitt at HighlightBox skal rendres Når HighlightBox skal vises som fluid Så rendres HighlightBox riktig 1`] = `
<div>
  <div
    class="highlightbox highlightbox--blueberry highlightbox--fluid"
  >
    <p>
      Avsnitt
    </p>
  </div>
</div>
`;

exports[`Gitt at HighlightBox skal rendres Når HighlightBox skal vises som large Så rendres HighlightBox riktig 1`] = `
<div>
  <div
    class="highlightbox highlightbox--blueberry highlightbox--large"
  >
    <div
      class="highlightbox__row"
    >
      <div
        class="highlightbox__col"
      >
        <div
          class="highlightbox__content-wrapper"
        >
          <div
            class="highlightbox__row"
          >
            <div
              class="highlightbox__col highlightbox__col--offset"
              data-analyticsid="highlight-box"
            >
              <p>
                Avsnitt
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gitt at HighlightBox skal rendres Når HighlightBox skal vises som medium Så rendres HighlightBox riktig 1`] = `
<div>
  <div
    class="highlightbox highlightbox--blueberry highlightbox--medium"
  >
    <div
      class="highlightbox__row"
    >
      <div
        class="highlightbox__col highlightbox__col--offset"
      >
        <div
          class="highlightbox__content-wrapper"
          data-analyticsid="highlight-box"
        >
          <p>
            Avsnitt
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
